@@ -16,6 +16,7 @@ usr/bin/neutron-debug usr/bin
 usr/bin/neutron-dev-server usr/bin
 usr/bin/neutron-ipset-cleanup usr/bin
 usr/bin/neutron-keepalived-state-change usr/bin
+usr/bin/neutron-linuxbridge-cleanup usr/bin
 usr/bin/neutron-netns-cleanup usr/bin
 usr/bin/neutron-ovs-cleanup usr/bin
 usr/bin/neutron-pd-notify usr/bin
