@@ -3,7 +3,7 @@
 # Provides:          neutron-plugin-linuxbridge-agent
 # Required-Start:    $network $local_fs $remote_fs $syslog
 # Required-Stop:     $remote_fs
-# Should-Start:      mysql postgresql rabbitmq-server keystone
+# Should-Start:      mysql postgresql rabbitmq-server keystone neutron-linuxbridge-cleanup
 # Should-Stop:       mysql postgresql rabbitmq-server keystone
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
