@@ -1,0 +1,18 @@
+#!/bin/sh
+### BEGIN INIT INFO
+# Provides:          neutron-linuxbridge-cleanup
+# Required-Start:    $network $local_fs $remote_fs $syslog
+# Required-Stop:     $remote_fs
+# Should-Start:
+# Should-Stop:
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Neutron Linux Bridge Cleanup
+# Description:       Linux Bridge Cleanup for OpenStack Neutron
+### END INIT INFO
+
+# Authors: Corey Bryant <corey.bryant@canonical.com>
+
+DESC="OpenStack Neutron Linux bridge cleanup"
+PROJECT_NAME=neutron
+NAME=${PROJECT_NAME}-linuxbridge-cleanup
